--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,12 @@
 		<java.version>25</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
